# cutepandas

./: .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.rst  Makefile  README.md  SUMMARY.html  changelog.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yaml
cutepandas/: __init__.py
cutepandas/pandasmodels/: __init__.py  basedatasetmodel.py  pandascategorylistmodel.py  pandascolumnlistmodel.py  pandasdataframemodel.py  pandasindexfilterproxymodel.py  pandasindexmodel.py  pandasmodel.py  polarsdataframemodel.py
cutepandas/pandaswidgets/: __init__.py  dataframeindexwidget.py  dataframelistwidget.py  dataframemanagerwidget.py  dataframeviewer.py  dataframeviewer2.py  dataframewidget.py
cutepandas/qtframe/: qtframe.py
cutepandas/util/: helpers.py  icons.py
cutepandas/utils/: icons.py
docs/: changelog.md  gen_pages.py  index.md
docs/api/: pandasmodels.md  pandaswidgets.md
models/: HorizontalHeaderModel.html  PandasCategoryListModel.html  PandasColumnListModel.html  PandasDataFrameModel.html  PandasEvalFilterProxyModel.html  PandasIndexListModel.html  PandasMultiStringColumnFilterProxyModel.html  PandasStringColumnFilterProxyModel.html  SUMMARY.html  VerticalHeaderModel.html  index.html
search/: search_index.json
tests/: conftest.py  test_pandasmodels.py  test_pandaswidgets.py
widgets/: DataFrameListWidget.html  DataFrameManagerWidget.html  DataFrameViewer.html  DataFrameWidget.html  SUMMARY.html  index.html
