[tool.poetry]
name = "CutePandas"
version = "0.2.2"
description = "Qt Widgets and Objects for Pandas datastructures"
readme = 'docs/index.md'
repository = "https://github.com/phil65/cutepandas"
homepage = "https://github.com/phil65/cutepandas"
authors = ["phil65 <philipptemminghoff@googlemail.com>"]
packages = [
    { include = "cutepandas" },
]

# [tool.poetry.plugins."pyinstaller40"]
# hook-dirs = "cutepandas.__pyinstaller:get_hook_dirs"

# [tool.poetry.plugins."pytest11"]
# pytest-qt = "cutepandas.cutepandasest.plugin"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

pandas = "*"
prettyqt = "*"
PyQt6 = {version = "^6.5", optional=true}
PyQt6-Charts = {version = "^6.5", optional=true}
PyQt6-WebEngine = {version = "^6.5", optional=true}
PyQt6-QScintilla = {version = "^2.0", optional=true}
pyside6 = {version = "^6.5", optional=true}


[tool.poetry.dev-dependencies]
pytest = "^7"
pip = "^23"
pytest-cov = "^4"
pytest-qt = {version = "^4.1"}
mypy = "^1"
types-Deprecated = "^1.2"
types-docutils = "^0"
types-orjson = "^3.6"
pylint = "^2.5"
pytest-xvfb = {version = "^2", markers = "sys_platform == 'linux'"}
codecov = "^2.1"
coverage = "^7"
mkdocs = "^1.4"
mkdocs-material = "^9"
mkdocstrings = {version = "^0", extras = ["python-legacy"]}

pymdown-extensions = "^10"
black = "^23"
devtools = "^0"
commitizen = "^3"

[tool.poetry.extras]
pyside6 = ["pyside6"]
pyqt6 = ["pyqt6", "PyQt6-Charts", "PyQt6-WebEngine", "PyQt6-QScintilla"]
addons = ["docutils", "orjson"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests",
]
junit_family = "xunit2"
qt_qapp_name = "cutepandas-test"
# qt_api = "pyside6"
qt_log_level_fail = "CRITICAL"
log_cli = true
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"


[tool.black]
line-length = 90
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.2"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_start_rev = "v0.1.0"
changelog_file = "docs/changelog.md"
version_files = [
    "cutepandas/__init__.py:__version__",
    "pyproject.toml:version",
]

[build-system]
# requires = ["poetry>=0.12"]
# build-backend = "poetry.masonry.api"
# need to check this
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
# for pip install -e .
# requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4", "pbr"]
